Fix ComplexDisclosurePanel widget containment to be proper GWT style
We need to make sure our widgets are contained in their parent,
and so on up the graph.  Just connecting things in DOM may not be
enough for GWT widgets to be completely happy.

Also fixed layout problems related to the 2nd header column moving
back and forth when the width of the content panel changed as it was
expanded and populated.  By forcing the width of the first column to
be a fixed width we can ensure the 2nd header column gets any extra
table width when the disclose panel expands to show its full content.

--- a/webapp/src/com/google/gerrit/public/Gerrit.css
+++ b/webapp/src/com/google/gerrit/public/Gerrit.css
@@ -191,6 +191,7 @@
 
 .gerrit-ChangeScreen .gwt-DisclosurePanel .header td {
 	font-weight: bold;
+	white-space: nowrap;
 }
 
 .gerrit-ChangeScreen .gwt-DisclosurePanel .content {
